# space-invaders-rl

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dqn.yaml  ppo.yaml
reports/: random_baseline.json
src/asteroids_rl/: __init__.py  callbacks.py  env.py  evaluate.py  record.py  train.py
src/atari_rl/: train.py
tests/: test_env.py
